--- a/src/components/WikipediaLang/WikipediaLang.css
+++ b/src/components/WikipediaLang/WikipediaLang.css
@@ -57,3 +57,9 @@ ul .mid-list {
 .anchor-text {
   white-space: nowrap;
 }
+
+.txt {
+  font-size: 90%;
+  font-weight: bold;
+  font-family: inherit;
+}
